Fix: pom file